Añade aviso cuando no existen indicadores disponibles para la fecha de hoy.

--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -115,6 +115,6 @@
 </div>
 <div *ngIf="notAvailableIndicators" class="container-fluid d-flex justify-content-center" style="margin-top:20px;">
   <span class="badge badge-warning" style="font-size:13px;">
-    {{apiNotAvailableErr}}
+    No hay indicadores disponibles para la fecha actual
   </span>
 </div>
