--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -1,15 +1,14 @@
-<div>
-  <h1 id="current-indicators" style="font-style:bold;">
-    Indicadores del día {{currentDate | date:'dd-MM-yyyy'}}
+<div class="container-fluid flex" style="background-color:#FBFBFB; width:30%;">
+  <h1 id="current-indicators" style="font-weight:bold;">
+    {{ asset }} - Indicadores del día {{currentDate | date:'dd-MM-yyyy'}}
   </h1>
-  <hr>
 </div>
 <div id="current-indicators" class="container-fluid">
-  <table id="current-indicators-table" class="table borderless">
+  <table id="current-indicators-table" class="table">
     <thead>
       <tr>
-        <th>Estrategia</th>
-        <th>Indicador</th>
+        <th style="border-style:none;">Estrategia</th>
+        <th style="border-style:none;">Indicador</th>
       </tr>
     </thead>
     <tbody>
@@ -108,7 +107,7 @@
     </tbody>
   </table>
 </div>
-<div *ngIf="apiNotAvailableErr!=''" class="container-fluid d-flex justify-content-center" style="margin-top:20px;">
+<div *ngIf="apiNotAvailableErr!=''" class="container-fluid d-flex justify-content-center" style="margin-top:10px;">
   <span class="badge badge-danger" style="font-size:13px;">
     {{apiNotAvailableErr}}
   </span>
@@ -117,4 +116,52 @@
   <span class="badge badge-warning" style="font-size:13px;">
     No hay indicadores disponibles para la fecha actual
   </span>
+</div>
+<hr>
+<div class="container-fluid d-flex justify-content-center item item-1" fxFlex="50%" fxFlexOrder="1" style="margin-top:20px;">
+  <h2 class="title-form-field" style="font-weight:bold;">Analizar tendencias pasadas</h2>
+  <mat-form-field class="date-form-field" appearance="fill">
+    <mat-label>Periodo de análisis</mat-label>
+    <mat-date-range-input [formGroup]="period" [rangePicker]="picker1" [comparisonStart]="period.value.start" [comparisonEnd]="period.value.end">
+      <input matStartDate placeholder="Inicio" formControlName="start">
+      <input matEndDate placeholder="Fin" formControlName="end">
+    </mat-date-range-input>
+    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+    <mat-date-range-picker #picker1></mat-date-range-picker>
+  </mat-form-field>
+  <div>
+    <button mat-raised-button class="execute-analysis-btn" (click)='analyzeTrend()'>
+      <mat-icon inline=true style=" height:20px;">trending_up</mat-icon>
+      Ejecutar análisis
+    </button>
+  </div>
+</div>
+
+<div *ngIf="loadingAnalysis" class="fluid-container d-flex justify-content-center" style="margin-left:auto; margin-right:auto;">
+  <mat-spinner [diameter]="40"></mat-spinner>
+</div>
+<div id="trend-analysis" class="container" *ngIf="availableTrends && !loadingAnalysis">
+  <table id="trend-analysis-table" class="table">
+    <thead>
+      <tr>
+        <th style="border-style:none;">Estrategia</th>
+        <th style="border-style:none;">Indicador</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Posición de medias móviles y emociones</td>
+        <td>
+          <div>
+            <span class="badge badge-success even-larger-badge">
+              Compra
+            </span>
+          </div>
+          <div *ngIf="loading" class="fluid-container d-flex justify-content-center" style="margin-left:auto; margin-right:auto;">
+            <mat-spinner [diameter]="40"></mat-spinner>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
