--- a/src/app/assets/assets.component.html
+++ b/src/app/assets/assets.component.html
@@ -9,7 +9,7 @@
   <mat-spinner [diameter]="30"></mat-spinner>
 </div>
 
-<div *ngIf="!loading" class="mat-elevation-z0" id="search-table">
+<div class="mat-elevation-z0" id="search-table">
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z0" id="tabla1">
 
     <ng-container matColumnDef="name">
