--- a/src/app/assets/assets.component.css
+++ b/src/app/assets/assets.component.css
@@ -9,8 +9,8 @@
 }
 
 .mat-column-name {
-  flex: 0 0 25% !important;
-  width: 25% !important;
+  flex: 0 0 15% !important;
+  width: 15% !important;
 }
 
 .mat-column-ticker {
@@ -41,8 +41,11 @@
 .mat-column-strategybtn {
   flex: 0 0 10% !important;
   width: 10% !important;
-  justify-content: center;
-  margin: 5px;
+}
+
+.mat-column-deletebtn {
+  flex: 0 0 10% !important;
+  width: 10% !important;
 }
 
 .page-control {
@@ -74,6 +77,23 @@ mat-form-field {
   background-color: #4CAF50;
   border: none;
   color: #D6FFDA;
-  display: inline-block;
   border-radius: 6px;
+  margin-left: 15px;
+}
+
+.delete-btn {
+  background-color: #FF7474;
+  border: none;
+  color: #FFD6D6;
+  border-radius: 6px;
+  margin-left: 15px;
+}
+
+.confirmButton {
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #4962B3;
+  font-size: 12px;
+  border: 1px solid #3e549a;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
 }
