--- a/src/app/assets/assets.component.html
+++ b/src/app/assets/assets.component.html
@@ -43,12 +43,21 @@
     </ng-container>
 
     <ng-container matColumnDef="strategybtn">
-      <th mat-header-cell *matHeaderCellDef>Estrategia</th>
-      <mat-cell *matCellDef="let asset" id="strategy-col">
-        <button title="{{'Indicadores técnicos de ' + asset.name}}" mat-button mat-icon-button class="strategy-btn" [routerLink]="['/analytics', asset.ticker]" routerLinkActive="mat-accent">
+      <th mat-header-cell *matHeaderCellDef>Indicadores</th>
+      <td mat-cell *matCellDef="let asset">
+        <button title="{{'Indicadores técnicos de ' + asset.name}}" class="strategy-btn" [routerLink]="['/analytics', asset.ticker]" routerLinkActive="mat-accent">
           <mat-icon>bar_chart</mat-icon>
         </button>
-      </mat-cell>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="deletebtn">
+      <th mat-header-cell *matHeaderCellDef>Eliminar activo</th>
+      <td mat-cell *matCellDef="let asset">
+        <button title="{{'Eliminar ' + asset.name}}" class="delete-btn" (click)='delete(asset)' routerLinkActive="mat-accent">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columns"></tr>
